<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestAdvice"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:padding="2dp"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/light_emoji"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:paddingLeft="8dp"
            android:src="@drawable/light" />

        <TextView
            android:layout_toRightOf="@id/light_emoji"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/coachs_advice"
            android:textStyle="bold"
            android:freezesText="true"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:textSize="22sp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:freezesText="true"
        android:text="@string/coach_advice_activity_description"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:src="@drawable/coach_cartoon">
    </ImageView>

    <EditText
        android:id="@+id/name_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:freezesText="true"
        android:hint="@string/name"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/email_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:freezesText="true"
        android:hint="@string/email_edit_text"
        android:layout_margin="8dp"/>

    <EditText

        android:id="@+id/topic_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:freezesText="true"
        android:layout_margin="8dp"
        android:hint="@string/topic" />

    <EditText
        android:id="@+id/description_edit_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:freezesText="true"
        android:gravity="bottom"
        android:hint="@string/description_and_question" />

    <Button
        android:id="@+id/send_to_firebase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:onClick="sendToFirebase"
        android:text="@string/send"
        android:freezesText="true"
        android:layout_gravity="center"/>

</LinearLayout>